// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Togglebox -  renders checked 1`] = `
<div
  className="togglebox"
>
  

  <input
    defaultChecked={true}
    disabled={null}
    id={null}
    type="checkbox"
  />
  

</div>
`;

exports[`Component: Togglebox -  renders disabled 1`] = `
<div
  className="togglebox"
>
  

  <input
    defaultChecked={null}
    disabled={true}
    id={null}
    type="checkbox"
  />
  

</div>
`;

exports[`Component: Togglebox -  renders with id and label 1`] = `
<div
  className="togglebox"
>
  

  <input
    defaultChecked={null}
    disabled={null}
    id="test"
    type="checkbox"
  />
  

  <label
    htmlFor="test"
  >
    test
  </label>
  

</div>
`;

exports[`Component: Togglebox -  renders without label 1`] = `
<div
  className="togglebox"
>
  

  <input
    defaultChecked={null}
    disabled={null}
    id={null}
    type="checkbox"
  />
  

</div>
`;

exports[`Component: Togglebox - renders checked 1`] = `
<div
  className="togglebox"
>
  

  <input
    defaultChecked={true}
    disabled={null}
    id={null}
    type="checkbox"
  />
  

</div>
`;

exports[`Component: Togglebox - renders disabled 1`] = `
<div
  className="togglebox"
>
  

  <input
    defaultChecked={null}
    disabled={true}
    id={null}
    type="checkbox"
  />
  

</div>
`;

exports[`Component: Togglebox - renders with id and label 1`] = `
<div
  className="togglebox"
>
  

  <input
    defaultChecked={null}
    disabled={null}
    id="test"
    type="checkbox"
  />
  

  <label
    htmlFor="test"
  >
    test
  </label>
  

</div>
`;

exports[`Component: Togglebox - renders without label 1`] = `
<div
  className="togglebox"
>
  

  <input
    defaultChecked={null}
    disabled={null}
    id={null}
    type="checkbox"
  />
  

</div>
`;
